firefox scrollbar fix

--- a/assets/th-variations-in-loop.css
+++ b/assets/th-variations-in-loop.css
@@ -5,7 +5,10 @@
     right: 0;
     width: 54px;
     padding: 6px 5px 0 14px;
-    overflow-y: auto;
+    overflow-y: scroll;
+    overflow-x: none;
+    scrollbar-width: thin;
+    scrollbar-color: #888 transparent;
     background: linear-gradient(to left, rgba(247,245,240, 1) 20%, rgba(247,245,240, .8) 50%, rgba(247,245,240, 0));
     /* backdrop-filter: blur(1px); */
 }
